# http-errors

./: Cargo.toml  README.md  flake.nix
.github/: dependabot.yaml
.github/workflows/: rust.yml
src/: assets.rs  errors.rs  main.rs  server.rs  template.rs
static/: stylesheet.css  template.html.tpl
