[package]
name = "http-errors"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.6", features = ["server", "server-auto", "http1", "tokio"] }
lazy_static = "1.5.0"
log = { version = "0.4.22", features = ["std"] }
pretty_env_logger = "0.5.0"
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path", "tokio"] }
tokio = { version = "1.38.0", features = ["bytes", "fs", "rt", "macros", "net", "io-std"] }
