[package]
name = "http-errors"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.14", features = ["server", "server-auto", "http1", "tokio"] }
lazy_static = "1.5.0"
log = { version = "0.4.27", features = ["std"] }
pretty_env_logger = "0.5.0"
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path", "tokio"] }
tokio = { version = "1.45.1", features = ["bytes", "fs", "rt", "macros", "net", "io-std"] }
