[package]
name = "http-errors"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["server", "server-auto", "http1", "tokio"] }
lazy_static = "1.5.0"
log = { version = "0.4.29", features = ["std"] }
pretty_env_logger = "0.5.0"
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path", "tokio"] }
tokio = { version = "1.49.0", features = ["bytes", "fs", "rt", "macros", "net", "io-std"] }
